--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--css bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <!--OUR TEAM-->
+    <header class="bg-primary">
+        <div class=" text-center container p-4">
+            <h1>OUR TEAM</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus facere laborum corrupti nam minima sint suscipit itaque soluta perferendis commodi. Iusto est quasi ex suscipit, nostrum molestiae deserunt veniam sed?</p>
+        </div>
+    </header>
+    <main>
+    </main>
+    <!--javascript-->
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
